--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -6,18 +6,17 @@
   --font-size-h2: 1.75rem;
   --font-size-h3: 1.25rem;
 
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  
-  --clr-dark:#0f172a;
+
+  --clr-dark: #0f172a;
   --clr-light: rgba(255, 255, 255, 0.87);
-  --clr-accent:#0400d22a;
-  --clr-decent:#7d84dd;
+  --clr-accent: #000000d7;
+  --clr-decent: #7d84dd;
   --clr-red: #ea7e7ef6;
   --clr-dark-blue: #2a3065;
   --clr-light-blue: #777ca8;
-  --clr-grey-light:#d9d9d9;
+  --clr-grey-light: #d9d9d9;
   --clr-grey-dark: #323232;
   background-color: var(--clr-light);
   font-synthesis: none;
@@ -36,7 +35,7 @@ blockquote {
   padding-left: 1rem;
   border-left: 4px solid var(--clr-accent);
   font-style: italic;
-  color: rgba(255, 255, 255, 0.8)
+  color: rgba(255, 255, 255, 0.8);
 }
 /* div {
   border: #0f172a 1px solid;
@@ -58,7 +57,9 @@ a:hover {
   text-decoration: underline;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   margin: 0;
   padding: 0;
   font-weight: 700;
@@ -91,30 +92,34 @@ input {
   transition: border-color 0.5s;
 }
 
-
 button {
-  border-radius: 15%;
+  border-radius: 25px;
   border: 1px solid transparent;
   font-family: inherit;
-  background-color: var(--clr-red);
+  background-color: var(--clr-accent);
   color: var(--clr-light);
   font-weight: 500;
   cursor: pointer;
   transition: border-color 0.5s;
   box-shadow: 0 4px 8px rgba(0, 0, 2, 0.5);
+  padding: 1em 2em;
 }
 button:hover {
   border-color: var(--clr-grey-dark);
+  transition: transform 0.5s ease;
+  transform: scale(1.1);
 }
-button:focus{
+button:focus {
   outline: none;
 }
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-
-input:disabled, button:disabled, select:disabled, textarea:disabled {
+input:disabled,
+button:disabled,
+select:disabled,
+textarea:disabled {
   background-color: var(--clr-light);
   color: var(--clr-dark);
   border-color: #ccc;
@@ -140,7 +145,6 @@ input[type="radio"]:checked + label::before {
   cursor: pointer;
 }
 
-
 figure {
   margin: 0.5rem;
   padding: 0;
@@ -161,12 +165,10 @@ figcaption {
 }
 @media (prefers-color-scheme: light) {
   :root {
-    
   }
   a:hover {
     color: var(--clr-accent);
   }
-
 }
 
 ul {
